Fix z-index of annotation icon
Update logic to check for z-index of children to set the z-index of view icons.

(Only checks immediate children)

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@
     background-color: rgba(0, 150, 255, 0.5);
     color: white;
     padding: 0px;
-    z-index: 9998;
+    /* z-index: 9998; */
 }
 
 
